# docs/swagger.json
@@ -284,6 +284,46 @@
                 }
             }
         },
+        "/token/open-id": {
+            "post": {
+                "description": "create token by open id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "token"
+                ],
+                "summary": "Create token by openid",
+                "parameters": [
+                    {
+                        "description": "code",
+                        "name": "code",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.LoginByOpenId"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/response.LoginResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/token/phone-code": {
             "post": {
                 "description": "create token by phone code",
@@ -663,16 +703,19 @@
                 "authority_id": {
                     "type": "string"
                 },
-                "created_at": {
+                "avatar_url": {
                     "type": "string"
                 },
-                "header_img": {
+                "created_at": {
                     "type": "string"
                 },
                 "id": {
                     "type": "integer"
                 },
                 "nick_name": {
+                    "type": "string"
+                },
+                "open_id": {
                     "type": "string"
                 },
                 "password": {
@@ -742,6 +785,23 @@
                 }
             }
         },
+        "request.LoginByOpenId": {
+            "type": "object",
+            "required": [
+                "code"
+            ],
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "encrypt": {
+                    "type": "string"
+                },
+                "iv": {
+                    "type": "string"
+                }
+            }
+        },
         "request.LoginByPhonePwd": {
             "type": "object",
             "required": [
@@ -796,7 +856,7 @@
                 "verification_code"
             ],
             "properties": {
-                "header_img": {
+                "avatar_url": {
                     "type": "string"
                 },
                 "nick_name": {
@@ -852,8 +912,7 @@
                     "type": "integer"
                 },
                 "data": {
-                    "description": "omitempty nil or default",
-                    "type": "object"
+                    "description": "omitempty nil or default"
                 },
                 "msg": {
                     "type": "string"
